# AHA2

./: ARCHITECTURE.md  ASSUMPTIONS.md  README.md  THEORY.md  create_phase1.py  pyproject.toml  requirements.txt
aha/: __init__.py
aha/agents/: __init__.py  hypothesis_agent.py
aha/beliefs/: __init__.py  base.py
aha/benchmarks/: __init__.py
aha/causal/: __init__.py  influence.py
aha/cells/: __init__.py  config.py  lpcc.py  patterns.py  state.py
aha/colony/: __init__.py  colony.py  consensus.py  distributed_colony.py
aha/communication/: __init__.py  messages.py  routed.py
aha/core/: __init__.py  colony.py  types.py
aha/economy/: __init__.py  resources.py
aha/environments/: __init__.py  distributed_chain.py  emergence.py  hidden_rules.py  rule_reversal.py  transfer.py
aha/experiments/: __init__.py  baselines.py  distributed.py  run.py  run_gridworld.py  runner.py
aha/hypotheses/: __init__.py  candidate_generation.py  hypothesis.py
aha/memory/: __init__.py  store.py
aha/metrics/: __init__.py  colony_metrics.py  lpcc_metrics.py
aha/prediction/: __init__.py  ledger.py  prediction.py
aha/scheduler/: __init__.py
aha/simulation/: __init__.py  gridworld.py
configs/: default.json
docs/: PHASE_1_SPEC.md
paper/: DISTRIBUTED_EMERGENCE_REPORT.md  LPCC_REPORT.md  OUTLINE.md
results/: ablations_seed0.json  discovery_seed0.json  distributed_seed0.json  distributed_seed1.json  distributed_seed2.json  emergence_seed0.json  reversal_seed0.json  transfer_seed0.json
tests/: test_agent.py  test_colony.py  test_distributed.py  test_lpcc.py  test_memory.py
(+2 files in other folders)
